tests/tests/snapshots/test__serde_conversions__serde-conversions-format-unified-multiple-field-aliases.snap
---
source: tests/tests/serde_conversions.rs
expression: multiple_fields
---
// This file has been generated by Specta. Do not edit this file manually.
export type FieldMultipleAliases = (({
	value: string,
} & {
	old_value: string,
} & {
	legacy_value: string,
}) extends infer T extends object ? { [K in keyof T]: { [P in K]: T[P] } & { [P in Exclude<keyof T, K>]?: never } }[keyof T] : never);
