tests/tests/snapshots/test__serde_conversions__serde-conversions-format-unified-option-is-none.snap
---
source: tests/tests/serde_conversions.rs
expression: rendered
---
// This file has been generated by Specta. Do not edit this file manually.
export type DefaultedSkipSerializingIfOnly = {
	value?: string,
};

export type SkipSerializingIfOnly = {
	value?: string,
};
