tests/tests/snapshots/test__serde_conversions__serde-conversions-format-unified-tuple-option-is-none.snap
---
source: tests/tests/serde_conversions.rs
expression: unified
---
// This file has been generated by Specta. Do not edit this file manually.
export type TupleVariantSkipSerializingIfOnly = { Value: string | null };
