tests/tests/snapshots/test__serde_conversions__serde-conversions-format-unified-variant-alias.snap
---
source: tests/tests/serde_conversions.rs
expression: variant
---
// This file has been generated by Specta. Do not edit this file manually.
export type VariantAlias = "Value" | "OldValue";
